<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.dhanya.quiz_android.Main2Activity">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ans:"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ans:"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ans:"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ans:"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ans:"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/a6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ans:"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/a7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ans:"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q8"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textSize="20dp">

                <RadioButton
                    android:id="@+id/a81"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q81"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/a82"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q82"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/a83"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q83"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/a84"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q84"
                    android:textSize="20dp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/a91"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q91"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/a92"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q92"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/a93"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q93"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/a94"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q94"
                    android:textSize="20dp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q10" />

            <RadioGroup
                android:id="@+id/ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/a101"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q101"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/a102"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q102"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/a103"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q103"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/a104"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q104"
                    android:textSize="20dp" />
            </RadioGroup>


        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/layout"
            android:layout_centerHorizontal="true"
            android:onClick="Result"
            android:text="Submit"
            android:textColor="@android:color/black" />

    </RelativeLayout>
</ScrollView>
